syntax = "proto3";

package org.member;

import "org/common.proto";
import "shared.proto";

service MemberService {
    rpc GetMyProfile (org.common.ById) returns (MemberResponse);
    rpc GetMyStats (org.common.ById) returns (org.common.StatsResponse);
    rpc FindAll (ListMembersRequest) returns (MemberListResponse);
    rpc CreateCampaignMember (CreateCampaignMemberRequest) returns (MemberResponse);
    rpc CreateTeamLead (CreateMemberRequest) returns (MemberResponse);
    rpc CreateTeamMember (CreateMemberRequest) returns (MemberResponse);
}

message MemberResponse {
    string id = 1;
    string user_id = 2;
    string email = 3;
    string role = 4;
    optional string team_id = 5;
    optional string campaign_id = 6;
    string username = 7;
}


message MemberFilters {
    optional string search = 1;
    optional int32 role_id = 2;
    optional string team_id = 3;
    optional string campaign_id = 4;
}

message ListMembersRequest {
    shared.PaginationParams pagination = 1;
    MemberFilters filters = 2;
}

message MemberListResponse {
    repeated MemberResponse members = 1;
    int32 total = 2;
}

message CreateMemberRequest {
    string email = 1;
    string password = 2;
    string username = 3;
    string team_id = 4;
    optional int32 role_id = 5;
}

message CreateCampaignMemberRequest {
    string email = 1;
    string password = 2;
    string username = 3;
    string campaign_id = 4;
    optional int32 role_id = 5;
}